--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: Exemplo de CI #teste pr
 on:
   pull_request:
     branches:
-    - main
-    - develop
+      - main
+      - develop
     types: [ opened, reopened ]
 
 jobs:
@@ -38,3 +38,27 @@ jobs:
 
       - name: Test with Maven
         run: mvn test
+
+  docker:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - test
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: penna76/ci-example:latest
