--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull Docker image
-        run: docker pull dibrito/ci-example:latest
+        run: docker pull penna76/ci-example:latest
 
       - name: Stop Docker container
         run: docker stop ci-example || true
@@ -19,4 +19,4 @@ jobs:
         run: docker rm ci-example || true
 
       - name: Run Docker container
-        run: docker run --name ci-example -d -p 8080:8080 penna/ci-example
+        run: docker run --name ci-example -d -p 8080:8080 penna76/ci-example
